--- a/css/style.less
+++ b/css/style.less
@@ -462,6 +462,10 @@ body {
     letter-spacing: 3px; 
     margin-bottom: 42px !important;
 }
+.contacts {
+    padding-top: 70px;
+    padding-bottom: 70px;
+}
 .contacts-container {
     max-width: 940px;
     margin: 0 auto;
@@ -470,4 +474,49 @@ body {
     input {
         display: block;
     }
+}
+.contacts-title {
+    font-size: 22px;
+    font-weight: 700;
+    text-transform: uppercase;
+    /* Text style for "G, IVE US" */
+    letter-spacing: 1.1px;
+    text-align: left;
+    margin: 0;
+    padding: 0;
+    margin-bottom: 35px;
+}
+.contacts-input {
+    padding: 18px 20px;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    font-size: 14px;
+    font-weight: 300;
+    /* Text style for "Email" */
+    letter-spacing: 0.7px; 
+    color: #413d4b;
+    margin-bottom: 23px;
+    width: 460px;
+}
+.contacts-form {
+    textarea {
+        padding: 22px;
+        font-size: 14px;
+        font-weight: 300;
+        /* Text style for "Your Massa" */
+        letter-spacing: 0.7px;
+        color: #413d4b;
+        border: 1px solid rgba(0, 0, 0, 0.1);
+        margin-bottom: 21px;
+        width: 460px;
+    }
+}
+.contacts-btn {
+    border: 1px solid #00e0d0;
+    background: none;
+    padding: 15px 33px;
+    display: block;
+    font-size: 16px;
+    font-weight: 400;
+    text-transform: uppercase;
+    color: #00e0d0; 
 }
