--- a/css/style.css
+++ b/css/style.css
@@ -517,3 +517,107 @@ body {
   text-transform: uppercase;
   color: #00e0d0;
 }
+.footer {
+  position: relative;
+  z-index: -2;
+  padding: 70px 0;
+  background: url(/img/footer.png) no-repeat;
+  background-size: cover;
+}
+.footer::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-image: linear-gradient(to right, #09052f 0%, #311d5e 100%);
+  opacity: 0.85;
+  z-index: -1;
+}
+.footer-container {
+  max-width: 940px;
+  margin: 0 auto;
+  color: #fff;
+}
+.footer-items-block {
+  display: grid;
+  grid-template-columns: 0.33333333fr 0.25fr 0.33333333fr;
+  grid-template-rows: auto;
+  justify-content: space-between;
+}
+.footer-items-menu-copy {
+  display: grid;
+  grid-template-columns: 0.5fr 0.5fr;
+  grid-template-rows: auto;
+  padding-top: 70px;
+}
+.footer-copy {
+  text-align: right;
+  margin-top: auto;
+}
+.footer-ul {
+  display: flex;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  justify-content: space-between;
+  max-width: 301px;
+}
+.footer-ul a {
+  text-decoration: none;
+  color: #fff;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 26px;
+  text-transform: uppercase;
+  /* Text style for "H, ELP" */
+  letter-spacing: 0.35px;
+}
+.footer-logo {
+  margin-bottom: 27px;
+}
+.footer-p {
+  padding: 0;
+  margin: 0;
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 26px;
+  /* Text style for "lorem quis" */
+  letter-spacing: 0.35px;
+}
+.footer-text-block {
+  padding: 0;
+  margin: 0;
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 26px;
+  /* Text style for "Ruko cucru" */
+  letter-spacing: 0.35px;
+  margin-bottom: 27px;
+}
+.footer-title {
+  padding: 0;
+  margin: 0;
+  margin-bottom: 42px;
+  padding-top: 20px;
+  font-size: 15px;
+  font-weight: bold;
+  text-transform: uppercase;
+  /* Text style for "O, UR STUD" */
+  letter-spacing: 0.75px;
+}
+.footer-input {
+  border: 1px solid #ffffff;
+  background: none;
+  padding: 16px;
+  font-size: 14px;
+  color: #fff;
+  font-weight: 300;
+  line-height: 26px;
+  /* Text style for "Subscribe" */
+  letter-spacing: 0.7px;
+}
+.footer-input ::placeholder {
+  color: #fff;
+}
