--- a/css/style.css
+++ b/css/style.css
@@ -7,23 +7,11 @@ body {
   padding: 0;
 }
 .header {
-  background: url(https://cloclo39.datacloudmail.ru/view/img/background.png?etag=26CD77AA4A133757299FD533AE0346C345B35FB1&x-email=badbe%40bk.ru) no-repeat 50% 50%;
+  background: url(/img/bg-1.png) no-repeat;
   background-size: cover;
   color: #fff;
   padding-bottom: 70px;
   position: relative;
-  z-index: -2;
-}
-.header::before {
-  content: '';
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  background-image: linear-gradient(to right, #09052f 0%, #311d5e 100%);
-  opacity: 0.85;
-  z-index: -1;
 }
 .header-container {
   max-width: 900px;
@@ -91,22 +79,6 @@ body {
   letter-spacing: 0.33px;
   text-decoration: none;
   font-weight: bold;
-}
-.logo {
-  color: linear-gradient(to right, #00e0d0 0%, #4aa3cc 100%);
-  font-size: 30px;
-  font-weight: lighter;
-  padding-left: 55px;
-  position: relative;
-}
-.logo::before {
-  content: '';
-  position: absolute;
-  width: 44px;
-  height: 50px;
-  background: url(https://cloclo25.datacloudmail.ru/view/img/logo.png?etag=C18FFEE0CA4F3BA8E68446F3B6A04B0C4440BDA6&x-email=badbe%40bk.ru) no-repeat 50% 50%;
-  top: -10px;
-  left: 0;
 }
 .description-btn {
   background: none;
@@ -519,26 +491,15 @@ body {
 }
 .footer {
   position: relative;
-  z-index: -2;
   padding: 70px 0;
-  background: url(/img/footer.png) no-repeat;
+  background: url(/img/bg-2.png) no-repeat;
   background-size: cover;
-}
-.footer::before {
-  content: '';
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  background-image: linear-gradient(to right, #09052f 0%, #311d5e 100%);
-  opacity: 0.85;
-  z-index: -1;
 }
 .footer-container {
   max-width: 940px;
   margin: 0 auto;
   color: #fff;
+  z-index: 1;
 }
 .footer-items-block {
   display: grid;
@@ -610,14 +571,31 @@ body {
 .footer-input {
   border: 1px solid #ffffff;
   background: none;
-  padding: 16px;
+  padding: 16px 0;
+  padding-left: 16px;
+  padding-right: 26px;
+  height: 45px;
   font-size: 14px;
   color: #fff;
   font-weight: 300;
-  line-height: 26px;
   /* Text style for "Subscribe" */
   letter-spacing: 0.7px;
+  margin-left: auto;
 }
-.footer-input ::placeholder {
+.footer-input::placeholder {
   color: #fff;
+  opacity: 0.75;
+}
+.footer-sub {
+  position: relative;
+}
+.footer-sub::after {
+  content: '';
+  position: absolute;
+  display: block;
+  width: 70px;
+  height: 45px;
+  top: 0;
+  right: 0;
+  background: url(/img/subscribe.png) no-repeat;
 }
