--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body {
   padding: 0;
 }
 .header {
-  background: url(/img/bg-1.png) no-repeat;
+  background: url(img/bg-1.png) no-repeat;
   background-size: cover;
   color: #fff;
   padding-bottom: 70px;
